# python-mcp-server

./: LICENSE  README.md
cmd/: README.md  pyproject.toml  setup.py
cmd/src/mcp_server_cmd/: __init__.py  client.py  server.py
file_system/: README.md  pyproject.toml  setup.py
file_system/src/mcp_server_file_system/: __init__.py  client.py  server.py
git/: README.md  pyproject.toml  setup.py
git/src/mcp_server_git/: client.py  server.py
knowledge_service/: pyproject.toml  setup.py
knowledge_service/src/mcp_server_knowledge_service/: __init__.py  client.py  knowledge_base_api.py  knowledge_service_api.py  server.py
