[project]
name = "mcp_server_cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jieyu", email = "26741980@qq.com"  }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.11.3",
    "paramiko>=3.5.1",
    "setuptools>=79.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [{ include = "mcp_server_cmd", from = "src" }]


[project.scripts]
git = "mcp_server_cmd.server:main"


