[project]
name = "mcp_server_git"
version = "0.1.0"
description = "mcp_server_git"
readme = "README.md"
authors = [
    { name = "jieyu", email = "26741980@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.11.3", 
    "gitpython>=3.1.43",
]

[tool.hatch.build.targets.wheel]
packages = [{ include = "mcp_server_git", from = "src" }]


[project.scripts]
mcp_server_git = "mcp_server_git.server:main"

